k8s/base/cockroachdb.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cockroachdb
