k8s/base/stats-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-worker
  namespace: postic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stats-worker
  template:
    metadata:
      labels:
        app: stats-worker
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
        - name: stats-worker
          image: ghcr.io/blackhatred/postic-stats-worker:latest
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
