k8s/base/upload-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload-service
  namespace: postic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upload-service
  template:
    metadata:
      labels:
        app: upload-service
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
        - name: upload-service
          image: ghcr.io/blackhatred/postic-upload-service:latest
          ports:
            - containerPort: 50052
              name: grpc
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: upload-service
  namespace: postic
spec:
  selector:
    app: upload-service
  ports:
    - protocol: TCP
      port: 50052
      targetPort: 50052
