k8s/base/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: postic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
        - name: user-service
          image: ghcr.io/blackhatred/postic-user-service:latest
          ports:
            - containerPort: 50051
              name: grpc
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: postic
spec:
  ports:
    - port: 50051
      name: grpc
      targetPort: 50051
  selector:
    app: user-service
  type: ClusterIP
