k8s/base/vk-event-listener.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vk-event-listener
  namespace: postic
spec:
  replicas: 1
  strategy:
    type: Recreate  # Гарантирует, что старый под удаляется перед созданием нового
  selector:
    matchLabels:
      app: vk-event-listener
  template:
    metadata:
      labels:
        app: vk-event-listener
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
        - name: vk-event-listener
          image: ghcr.io/blackhatred/postic-vk-listener:latest
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: vk-event-listener
  namespace: postic
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: vk-event-listener
  type: ClusterIP
